<resources>
    <string name="app_name">Inventory Price Checker</string>
    <string name="title_activity_main2">Inventory Price Checker</string>
    <string name="title_home">Scan</string>
    <string name="title_dashboard">Manage Items</string>
    <string name="title_notifications">View List</string>
    <string name="barcode">Barcode:</string>
    <string name="item_price">Item Price:</string>
    <string name="item_name">Item Name:</string>
    <string name="add_item">Add Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="price_of_the_product">Price of the Product</string>
    <string name="name_of_product">Name of Product</string>
    <string name="barcode_id">Barcode ID</string>
</resources>