<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.myapplication.ui.scan.ScanFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_manage_items"
        android:name="com.example.myapplication.ui.manage_items.ManageItemsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_manage_items" />

    <fragment
        android:id="@+id/navigation_view_list"
        android:name="com.example.myapplication.ui.view_list.ViewListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_view_list" />
</navigation>